tracing/pinpoint-web/ex_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  labels:
    app.kubernetes.io/name: banner
    argocd.argoproj.io/instance: banner
  name: banner
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: banner
      app.kubernetes.io/name: banner
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: banner
        app.kubernetes.io/name: banner
    spec:
      containers:
      ## < pinpoint env 추가
        - env:
            - name: JAVA_TOOL_OPTIONS
              value: >-
                -javaagent:/pinpoint/pinpoint-bootstrap-2.5.2.jar
                -Dpinpoint.config=/pinpoint/pinpoint-root.config
                -Dpinpoint.applicationName=banner -Dpinpoint.agentName=banner
                -Dpinpoint.container
      ##   >
          image: 'tkavna123/banner:5'
          imagePullPolicy: IfNotPresent
          name: banner
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          ## < pinpoint 디렉토리 마운트
          volumeMounts:
            - mountPath: /pinpoint
              name: pinpoint-agent
          ## >
      terminationGracePeriodSeconds: 30
      ## < pv 불러오기
      volumes:
        - name: pinpoint-agent
          persistentVolumeClaim:
            claimName: pinpoint-agent-pvc
      ## >
