tracing/pinpoint-web/hbase.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hbase
  labels:
    app: hbase
spec:
  serviceName: hbase-service
  replicas: 1
  selector:
    matchLabels:
      app: hbase
  serviceName: hbase
  template:
    metadata:
      labels:
        app: hbase
    spec:
      containers:
      - name: hbase
        image: docker.io/pinpointdocker/pinpoint-hbase:2.5.2
        volumeMounts:
        - name: config
          mountPath: /opt/hbase/hbase-1.2.6/conf/hbase-site.xml
          subPath: hbase-site.xml
      volumes:
      - name: config
        configMap:
          name: hbase
          items:
          - key: hbase-site.xml
            path: hbase-site.xml
---
apiVersion: v1
kind: Service
metadata:
  name: hbase
  labels:
    app: hbase
spec:
  ports:
  - name: master
    port: 16000
  - name: regionserver
    port: 16201
  selector:
    app: hbase
