tracing/pinpoint-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinpoint-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: pinpoint.srrain.kro.kr
    http:
      paths:
      - backend:
          service:
            name: pinpoint-web
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
